分割数组为连续子序列(官方) 任务调度器 杨辉三角

--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="HeapPriorityQueue">
+      <HintPath>..\..\..\ConsoleApp4\HeapPriorityQueue\bin\Debug\netstandard2.0\HeapPriorityQueue.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
